--- a/WeWrite/Storyboard.storyboard
+++ b/WeWrite/Storyboard.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="EECS441 WeWrite" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="EECS441 WeWrite" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -37,6 +37,9 @@
                             <constraint firstItem="ZWe-Pg-HQ4" firstAttribute="bottom" secondItem="xvP-wZ-9kp" secondAttribute="bottom" type="default" id="mBH-GQ-qFx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="InputBox" destination="ZWe-Pg-HQ4" id="ZfZ-dw-vik"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mqa-cI-21a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -44,11 +47,17 @@
         </scene>
     </scenes>
     <classes>
+        <class className="IMLCTextView" superclassName="UITextView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IMLCTextView.h"/>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="InputBox" candidateClass="UITextView"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
