--- a/WeWrite/Storyboard.storyboard
+++ b/WeWrite/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ihh-VJ-Ml6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ihh-VJ-Ml6">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="EECS441 WeWrite" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="0123456789" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -20,8 +20,16 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TMf-k2-lpa">
                                 <items>
                                     <navigationItem title="WeWrite" id="XTy-o6-wjo">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="undo" id="gAR-Lm-QWZ"/>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="redo" id="Nz9-IA-Xqk"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="undo" id="gAR-Lm-QWZ">
+                                            <connections>
+                                                <action selector="Undo:" destination="ihh-VJ-Ml6" id="Yge-mQ-7ym"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="redo" id="Nz9-IA-Xqk">
+                                            <connections>
+                                                <action selector="Redo:" destination="ihh-VJ-Ml6" id="0wr-Oc-0j5"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -46,17 +54,6 @@
             <point key="canvasLocation" x="104" y="2"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="IMLCTextView" superclassName="UITextView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/IMLCTextView.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
