--- a/WeWrite/Storyboard.storyboard
+++ b/WeWrite/Storyboard.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="0123456789" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -33,6 +33,25 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cf2-s3-l6p">
+                                <items>
+                                    <barButtonItem title="Create Session" width="100" id="gal-NW-DPI">
+                                        <connections>
+                                            <action selector="CreateSession:" destination="ihh-VJ-Ml6" id="xQS-FF-NQZ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Join Session" width="80" id="YkY-yu-5vg">
+                                        <connections>
+                                            <action selector="JoinSession:" destination="ihh-VJ-Ml6" id="G5X-6D-78p"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Leave Session" width="100" id="kF1-Ps-px0">
+                                        <connections>
+                                            <action selector="LeaveSession:" destination="ihh-VJ-Ml6" id="7O8-GY-8QV"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -40,9 +59,12 @@
                             <constraint firstItem="TMf-k2-lpa" firstAttribute="leading" secondItem="xvP-wZ-9kp" secondAttribute="leading" type="default" id="Iqn-aF-iEa"/>
                             <constraint firstItem="TMf-k2-lpa" firstAttribute="trailing" secondItem="xvP-wZ-9kp" secondAttribute="trailing" type="default" id="Q2L-7N-yEP"/>
                             <constraint firstItem="TMf-k2-lpa" firstAttribute="top" secondItem="xvP-wZ-9kp" secondAttribute="top" type="default" id="ccR-dX-NvZ"/>
+                            <constraint firstItem="cf2-s3-l6p" firstAttribute="leading" secondItem="xvP-wZ-9kp" secondAttribute="leading" type="default" id="gEO-5d-PbK"/>
                             <constraint firstItem="ZWe-Pg-HQ4" firstAttribute="leading" secondItem="xvP-wZ-9kp" secondAttribute="leading" type="default" id="gos-A8-NA2"/>
                             <constraint firstItem="ZWe-Pg-HQ4" firstAttribute="trailing" secondItem="xvP-wZ-9kp" secondAttribute="trailing" type="default" id="hdM-cc-xIe"/>
+                            <constraint firstItem="cf2-s3-l6p" firstAttribute="trailing" secondItem="xvP-wZ-9kp" secondAttribute="trailing" type="default" id="ifk-mr-9eB"/>
                             <constraint firstItem="ZWe-Pg-HQ4" firstAttribute="bottom" secondItem="xvP-wZ-9kp" secondAttribute="bottom" type="default" id="mBH-GQ-qFx"/>
+                            <constraint firstItem="cf2-s3-l6p" firstAttribute="bottom" secondItem="xvP-wZ-9kp" secondAttribute="bottom" type="default" id="zXj-t8-SkS"/>
                         </constraints>
                     </view>
                     <connections>
@@ -51,9 +73,27 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mqa-cI-21a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="104" y="2"/>
+            <point key="canvasLocation" x="-366" y="-26"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="IMLCTextView" superclassName="UITextView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IMLCTextView.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="CreateSession:"/>
+                <relationship kind="action" name="JoinSession:"/>
+                <relationship kind="action" name="LeaveSession:"/>
+                <relationship kind="action" name="Redo:"/>
+                <relationship kind="action" name="Undo:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
