--- a/WeWrite/Storyboard.storyboard
+++ b/WeWrite/Storyboard.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="12345" translatesAutoresizingMaskIntoConstraints="NO" id="ZWe-Pg-HQ4" customClass="IMLCTextView">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -40,7 +40,7 @@
                                             <action selector="CreateSession:" destination="ihh-VJ-Ml6" id="xQS-FF-NQZ"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Join Session" width="80" id="YkY-yu-5vg">
+                                    <barButtonItem title="Join Session" width="90" id="YkY-yu-5vg">
                                         <connections>
                                             <action selector="JoinSession:" destination="ihh-VJ-Ml6" id="G5X-6D-78p"/>
                                         </connections>
@@ -76,24 +76,6 @@
             <point key="canvasLocation" x="-366" y="-26"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="IMLCTextView" superclassName="UITextView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/IMLCTextView.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="CreateSession:"/>
-                <relationship kind="action" name="JoinSession:"/>
-                <relationship kind="action" name="LeaveSession:"/>
-                <relationship kind="action" name="Redo:"/>
-                <relationship kind="action" name="Undo:"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
